test/negative/auto_in_extern_signature.cg
fn[extern(C)] puts(s: const* auto) -> i32;

fn main() -> i32 { 0 }

